--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     	crossorigin="anonymous">
 </head>
 <body>
-
+		<script src="assets/js/three.js"></script>
+		<script src="assets/js/FBXLoader.js"></script>
+		<script src="assets/js/inflate.min.js"></script>
+		<script src="assets/js/OrbitControls.js"></script>
+		<script src="assets/js/main.js"></script>
 </body>
 </html>
